@startuml
package "ekspedisi" <<Folder>> {
    package "controller" <<Folder>>  {
        class LoginController {
            - log : Logger
            - view : LoginView
            - userDAO : UserDAO
            + initController() : void
            - routeByRole(user : User) : void
        }

        class AdminController {
            - log : Logger
            - view : AdminViews
            - loggedInAdmin : User
            - userDAO : UserDAO
            + initController() : void
        }

        class LoketController {
            - view : LoketViews
            - loggedInUser : User
            - paketDAO : PaketDAO
            - trackingDAO : TrackingDAO
            + initController() : void
            - handleInputPaket() : void
            - handleCheckPaket() : void
        }

        class GudangController {
            - view : GudangViews
            - trackingDAO : TrackingDAO
            - loggedInUser : User
            - STATE_HIERARCHY : Map<String, Integer>
            + initController() : void
            + handleMassTransitUpdate() : void
            + handleCekPaket() : void
        }

        class KurirController {
            - view : KurirViews
            - loggedInUser : User
            - trackingDAO : TrackingDAO
            - ALLOWED_PICKUP_STATUSES : Set<String>
            + initController() : void
            - handleDeliveryUpdate() : void
            - handleTakeToGudang() : void
            - handlePaketSelesai() : void
        }
    }
}

LoginController --> "uses" UserDAO
AdminController --> "uses" UserDAO
LoketController --> "uses" PaketDAO
LoketController --> "uses" TrackingDAO
GudangController --> "uses" TrackingDAO
KurirController --> "uses" TrackingDAO

'Legenda
legend bottom center
      <b>Legend Visibilitas:</b>
      <color:red>🟥</color>  <b> - </b>  Private
      <color:blue>🔷</color>  <b> ~ </b>  Package Private
      <color:orange>🔶</color>  <b> # </b>  Protected
      <color:green>🟢</color>  <b> + </b>  Public
endlegend

@enduml